Adding UserLogin model and update identity attribute
