# router/app.go
@@ -19,5 +19,6 @@ func Router() *gin.Engine {
 	r.GET("/user/createUser", service.CreateUser)
 	r.GET("/user/DeleteUser", service.DeleteUser)
 	r.POST("/user/UpdateUser", service.UpdateUser)
+	r.POST("/user/UserLogin", service.UserLogin)
 	return r
 }
